--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://mysterycultist.org/'
+baseURL = 'https://mysterycultist.com/'
 languageCode = 'en-uk'
 title = 'The Mystery Cultist'
 
