Started writing both the cheetsheet and the first blog post introducing the main characters.

--- a/hugo.toml
+++ b/hugo.toml
@@ -17,3 +17,6 @@ title = 'The Mystery Cultist'
     maxDeletes = 256
     target = ''
     workers = 10
+
+[markup.goldmark.renderer]
+    hardWraps = true
